# src/features/presence/controller.ts
@@ -1,20 +1,37 @@
 import { NextFunction, Request, Response } from "express";
-import MessageRepository from "./repository";
+import PresenceRepository from "./repository";
+import { consoleLogger, logger } from "../../utils/logger";
 
-export default class MessageController {
-    messageRepository:MessageRepository;
-    constructor() {
-        this.messageRepository = new MessageRepository();
+export default class PresenceController {
+
+    presenceRepository:PresenceRepository;
+    constructor(presenceRepository:PresenceRepository) {
+        this.presenceRepository = new PresenceRepository();
     }
-
-    async add(req:Request, res:Response, next:NextFunction){
+    
+    async updateStatus(req:Request, res:Response, next:NextFunction):Promise<void>{
         try {
-            const message = req.body;
-            
+            const userId:string = req.query.userId as string;
+            const status:string = req.query.status as string;
+            await this.presenceRepository.updateStatus(userId, status);
+            res.status(201).json({success:true, message:`user:${userId} is now ${status}`})
         } catch (error) {
-            next(error);
+            throw error;
         }
     }
+
+    async getUserStatus(req:Request, res:Response, next:NextFunction):Promise<void>{
+        try {
+            const userId:string = req.params.userId as string;
+            const status = await this.presenceRepository.getUserStatus(userId);
+            const message = `User:${userId} is ${status?"Online":"Offline"}`;
+            consoleLogger.info(message);
+            logger.info(message);
+            res.status(200).json({success: true, online: status, message});
+        } catch (error) {
+            throw error;
+        }
+    }    
 
 }
 
